# rules_rs

./: MODULE.bazel
rs/: BUILD.bazel  extensions.bzl  rust_crate.bzl
rs/experimental/: BUILD.bazel
rs/experimental/toolchains/: declare_rustc_toolchains.bzl  module_extension.bzl
rs/private/: BUILD.bazel  crate_git_repository.bzl  crate_repository.bzl  repository_utils.bzl  toolchains_repository.bzl
rs/private/prost/: BUILD.bazel
rs/private/purl/: BUILD.bazel  builder.bzl
rs/private/purl/normalization/: BUILD.bazel  normalization.bzl
rs/private/purl/percent_encoding/: BUILD.bazel  percent_encoding.bzl  tables.bzl  tables_test.bzl  test.bzl
rs/private/purl/strings/: BUILD.bazel  strings.bzl
rs/private/purl/validation/: BUILD.bazel  validation.bzl
test/: MODULE.bazel
test/git_crates/: BUILD.bazel
test/git_non_workspace_root/: Cargo.toml
test/git_non_workspace_root/src/: lib.rs
