load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "rules_rust",
    srcs = ["rules_rust.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "rules_rust_prost",
    srcs = ["rules_rust_prost.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:local.bzl",
    ],
)

bzl_library(
    name = "rules_rust_reexported_extensions",
    srcs = ["rules_rust_reexported_extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_features//:features",
        "@rules_rust//rust:bzl_lib",
    ],
)
