load("@bazel_lib//:bzl_library.bzl", "bzl_library")

# This is vendored from https://github.com/bazel-contrib/supply-chain/tree/main/metadata/purl and removing the visibility restriction

bzl_library(
    name = "builder",
    srcs = ["builder.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        "//rs/private/purl/normalization",
        "//rs/private/purl/percent_encoding",
        "//rs/private/purl/validation",
    ],
)
