load("@bazel_lib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "normalization.bzl",
    ],
)

filegroup(
    name = "srcs",
    srcs = [
        "normalization.bzl",
    ],
)

bzl_library(
    name = "normalization",
    srcs = ["normalization.bzl"],
    visibility = ["//rs:__subpackages__"],
)
