load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("//rs/private/purl/percent_encoding:tables_test.bzl", "test_cases")
load("//rs/private/purl/percent_encoding:test.bzl", "percent_encoding_test")

exports_files(
    [
        "percent_encoding.bzl",
        "tables_test.bzl",
        "tables.bzl",
        "test.bzl",
    ],
)

filegroup(
    name = "srcs",
    srcs = [
        "percent_encoding.bzl",
        "tables.bzl",
        "tables_test.bzl",
        "test.bzl",
    ],
)

percent_encoding_test(
    name = "percent_encoding_test",
    cases = test_cases,
)

bzl_library(
    name = "percent_encoding",
    srcs = ["percent_encoding.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        ":tables",
        "//rs/private/purl/strings",
    ],
)

bzl_library(
    name = "tables",
    srcs = ["tables.bzl"],
    visibility = ["//rs:__subpackages__"],
)

bzl_library(
    name = "test",
    srcs = ["test.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [":percent_encoding"],
)
