load("@bazel_lib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "validation.bzl",
    ],
)

filegroup(
    name = "srcs",
    srcs = [
        "validation.bzl",
    ],
)

bzl_library(
    name = "validation",
    srcs = ["validation.bzl"],
    visibility = ["//rs:__subpackages__"],
)
